--- a/IssueRunner.Gui/Views/IssueListView.axaml
+++ b/IssueRunner.Gui/Views/IssueListView.axaml
@@ -52,11 +52,19 @@
                     </Button.Styles>
                 </Button>
 
-                <!-- Diff Toggle Switch -->
-                <StackPanel Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,4,0" Spacing="6">
-                    <TextBlock Text="Diff" FontSize="11" Foreground="#666" VerticalAlignment="Center"/>
-                    <ToggleSwitch IsChecked="{Binding ShowDiffOnly}" VerticalAlignment="Center"/>
-                </StackPanel>
+                <!-- View Mode Selection -->
+                <ComboBox Grid.Column="3" 
+                         SelectedItem="{Binding ViewMode}"
+                         VerticalAlignment="Center"
+                         Margin="0,0,4,0"
+                         MinWidth="100"
+                         FontSize="11">
+                    <ComboBox.Items>
+                        <x:Static Member="vm:IssueViewMode.Current"/>
+                        <x:Static Member="vm:IssueViewMode.Baseline"/>
+                        <x:Static Member="vm:IssueViewMode.Diff"/>
+                    </ComboBox.Items>
+                </ComboBox>
 
                 <!-- Run Tests Button -->
                 <Button Grid.Column="4"
@@ -263,7 +271,11 @@
                                       FontSize="11"/>
                             <StackPanel Grid.Column="5" Spacing="2">
                                 <TextBlock Text="{Binding ., Converter={x:Static converters:StatusOrTestResultConverter.Instance}}"
-                                           Foreground="{Binding ChangeType, Converter={x:Static converters:ChangeTypeToColorConverter.Instance}, FallbackValue=#666}"/>
+                                           Foreground="{Binding ChangeType, Converter={x:Static converters:ChangeTypeToColorConverter.Instance}, FallbackValue=#666}">
+                                    <ToolTip.Tip>
+                                        <TextBlock Text="{Binding ChangeTooltip}"/>
+                                    </ToolTip.Tip>
+                                </TextBlock>
                             </StackPanel>
                             <TextBlock Grid.Column="6"
                                       Text="{Binding TestTypes}"
