--- a/IssueRunner.Gui/Views/RunTestsStatusDialog.axaml
+++ b/IssueRunner.Gui/Views/RunTestsStatusDialog.axaml
@@ -214,6 +214,15 @@
                             </Binding>
                         </TextBlock.IsVisible>
                     </TextBlock>
+                    <!-- Explicit completion marker when processing has finished -->
+                    <TextBlock Text="Processing finished"
+                              FontSize="12"
+                              FontWeight="SemiBold"
+                              Foreground="#2E7D32">
+                        <TextBlock.IsVisible>
+                            <Binding Path="IsFinished"/>
+                        </TextBlock.IsVisible>
+                    </TextBlock>
                 </StackPanel>
             </Grid>
         </Border>
